server/compilers/goLiteJS/src/test/ml1/invalid/decl32.go
// missing parentheses in distributed type declaration
package main

type
    num int
    float double
